--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ ehthumbs.db
 # Folder config file
 Desktop.ini
 
+.idea/
+target/
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
@@ -26,7 +28,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
